build!: update to Java 17
Closes #613.